# ai-product-reliability-kit

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  deploy.sh  docker-compose.yml  findings.md  package-lock.json  package.json  playwright.config.mjs  progress.md  rollback.sh  task_plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/dashboard/: Dockerfile  package-lock.json  package.json  server.mjs  worker.mjs
automation/: package-lock.json  package.json
automation/src/: generate.mjs  index.mjs
automation/test/: generate.test.mjs
cli/: package-lock.json  package.json
cli/src/: index.mjs  scanner.mjs  verify.mjs
cli/test/: scanner.test.mjs
deploy/: ecosystem.config.cjs
deploy/cron/: ai-product-reliability-backup.cron  ai-product-reliability-backup.logrotate
deploy/monitoring/: external-monitor.example.yml
docs/: architecture.md  automation.md  dashboard.md  deployment-acceptance.md  nginx-hihongrun-production.conf  production-readiness-report.md  production.md  requirements-verdict.md  roadmap.md  rollback.md  runbook.md  sdk.md  server-deployment-guide.md
scripts/: check-java-sdk.mjs  start-e2e-dashboard.mjs
sdks/python/: pyproject.toml
sdks/python/ai_product_reliability/: __init__.py  client.py
sdks/python/tests/: test_client.py
standard/: core-standard.md  event-schema.md  healthcheck-standard.md  ingestion-protocol.md  package-lock.json  package.json  product-contract.schema.json  release-and-compatibility.md  telemetry-envelope.schema.json
templates/: product.yml
(+96 files in other folders)
