[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-product-reliability"
version = "1.0.0"
description = "Server-side Python SDK for the AI Product Reliability ingestion protocol"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "AI Product Reliability Kit" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["ai_product_reliability"]
